# Lab_WordCount3

./: CMakeLists.txt  README.md  config.txt
dependencies/: FileProcessor.cpp  FileProcessor.h  config_reader.h  thread_safe_queue.h  time_meter.h
src/: Word_count2_multi_thread.cpp  Word_count3_multi_thread.cpp
